--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
   <header>
     <div id="header">
       <h1><img src="img/logo.svg" alt=""></h1>
+      <div  >
       <div id="menu" class="menu-btn">
         <span></span>
         <span></span>
         <span></span>
       </div>
+      </div>
     </div>
 
     <div id="mask"></div>
 
+    <div class="navi">
     <nav id="nav">
       <ul class="menu-tag">
         <li><a href="index.html">PICK UP</a></li>
@@ -35,6 +38,7 @@
         <li><a href="index.html">instagram</a></li>
       </ul>
     </nav>
+    </div>
   </header>
 
   <main>
